--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,28 @@
 {
     "name": "memeforming",
     "scripts": {
-        "dev": "nuxt",
-        "build": "nuxt build",
-        "generate": "nuxt generate",
-        "start": "nuxt start"
+        "dev": "nuxt-ts",
+        "build": "nuxt-ts build",
+        "generate": "nuxt-ts generate",
+        "start": "nuxt-ts start"
     },
     "dependencies": {
+        "@fortawesome/free-brands-svg-icons": "^5.14.0",
+        "@fortawesome/free-solid-svg-icons": "^5.14.0",
+        "@nuxtjs/axios": "^5.12.2",
+        "@nuxtjs/bulma": "^1.3.0",
+        "@nuxtjs/fontawesome": "^1.1.2",
         "@nuxtjs/redirect-module": "^0.3.1",
         "@nuxtjs/sitemap": "^2.4.0",
-        "nuxt": "^2.14.1"
+        "@toast-ui/vue-image-editor": "^1.2.0",
+        "nuxt": "^2.14.1",
+        "url-join": "^4.0.1",
+        "@nuxt/typescript-runtime": "^2.0.0"
     },
     "devDependencies": {
         "pug": "^3.0.0",
-        "pug-plain-loader": "^1.0.0"
+        "pug-plain-loader": "^1.0.0",
+        "@nuxt/typescript-build": "^2.0.3",
+        "@nuxt/types": "^2.14.6"
     }
 }
