--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "dependencies": {
         "@nuxtjs/redirect-module": "^0.3.1",
         "@nuxtjs/sitemap": "^2.4.0",
-        "nuxt": "^2.14.1"
+        "nuxt": "^2.14.1",
+        "url-join": "^4.0.1"
     },
     "devDependencies": {
         "pug": "^3.0.0",
