--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,14 @@
         "start": "nuxt start"
     },
     "dependencies": {
+        "@fortawesome/free-brands-svg-icons": "^5.14.0",
+        "@fortawesome/free-solid-svg-icons": "^5.14.0",
+        "@nuxtjs/axios": "^5.12.2",
+        "@nuxtjs/bulma": "^1.3.0",
+        "@nuxtjs/fontawesome": "^1.1.2",
         "@nuxtjs/redirect-module": "^0.3.1",
         "@nuxtjs/sitemap": "^2.4.0",
+        "@toast-ui/vue-image-editor": "^1.2.0",
         "nuxt": "^2.14.1",
         "url-join": "^4.0.1"
     },
