--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2018",
     "module": "ESNext",
     "strict": true,
     "noImplicitAny": true,
@@ -17,8 +17,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "rootDir": "src",
-    "outDir": "dist",
+    "allowJs": true,
     "lib": [
       "ESNext",
       "ESNext.AsyncIterable",
