Start using VueX store
This isn't fully working yet,

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,6 +18,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
     "lib": [
       "ESNext",
       "ESNext.AsyncIterable",
