--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
         "@nuxt/typescript-runtime": "^2.0.0"
     },
     "devDependencies": {
+        "@nuxt/types": "^2.14.6",
+        "@nuxt/typescript-build": "^2.0.3",
         "pug": "^3.0.0",
         "pug-plain-loader": "^1.0.0",
-        "@nuxt/typescript-build": "^2.0.3",
-        "@nuxt/types": "^2.14.6"
+        "typescript": "^4.0.3",
+        "vuex-module-decorators": "^1.0.1"
     }
 }
