Start using Django Rest Framework, align states with frontend, plan for endpoints

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ django = "*"
 requests = "*"
 django-grappelli = "*"
 celery = "*"
+djangorestframework = "*"
+markdown = "*"
+django-filter = "*"
 
 [requires]
 python_version = "3.8"
