--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,49 @@
-# IDE
+# Project-Specific
+
+backend/static/
+
+# IDE and OS
 
 .idea/
 .vscode/
+.DS_Store
 
-# Environment/Local
+# Environment
 
-HISTORY.md
+dist/
+coverage/
+/target/
+
+## Python
+
 .env
-*.sqlite3
-node_modules/
-.nuxt/
 __pycache__/
-static/
+*.pyc
+
+### Django
+
+*.sqlite3
+
+## JavaScript
+
+.nuxt/
+npm-debug.log
+node_modules/
+.nyc_output
+
+## Rust
+
+**/*.rs.bk
+
+## Remove/comment this line for executables:
+
+Cargo.lock
+
+## Godot
+
+.import/
+export.cfg
+export_presets.cfg
+*.translation
+.mono/
+data_*/
