--- a/api/Pipfile
+++ b/api/Pipfile
@@ -13,6 +13,7 @@ django-grappelli = "*"
 djangorestframework = "*"
 markdown = "*"
 requests = "*"
+django-typomatic = "*"
 
 [requires]
 python_version = "3.8"
