--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "generate": "nuxt-ts generate",
         "start": "nuxt-ts start"
     },
+    "repository": "https://github.com/teaminkling/gam-memes",
+    "license": "SEE LICENSE IN LICENSE",
     "dependencies": {},
     "devDependencies": {
         "@fortawesome/free-brands-svg-icons": "^5.14.0",
@@ -15,16 +17,20 @@
         "@nuxt/typescript-runtime": "^2.0.0",
         "@nuxtjs/axios": "^5.12.5",
         "@nuxtjs/bulma": "^1.3.0",
+        "@nuxtjs/color-mode": "^2.0.3",
         "@nuxtjs/fontawesome": "^1.1.2",
         "@nuxtjs/redirect-module": "^0.3.1",
         "@nuxtjs/sitemap": "^2.4.0",
+        "@nuxtjs/style-resources": "^1.0.0",
         "@toast-ui/vue-image-editor": "^1.2.0",
         "@types/url-join": "^4.0.0",
+        "bulma": "^0.9.2",
+        "node-sass": "^5.0.0",
         "nuxt": "^2.14.1",
         "pug": "^3.0.0",
-        "pug-plain-loader": "^1.0.0",
+        "pug-plain-loader": "^1.1.0",
+        "sass-loader": "^10.1.1",
         "typescript": "^4.0.3",
-        "url-join": "^4.0.1",
         "vuex-module-decorators": "^1.0.1"
     }
 }
